# repla-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: state_root.rs
docs/: architecture.md  references.md  security.md  sequencer-spec.md
examples/: launch_local.rs
idl/: repla_settler.json
scripts/: check_no_generator.sh
src/: fee.rs  hash.rs  lib.rs  merkle.rs  runtime.rs  settler.rs  state.rs
tests/: state_root_parity.rs
