[package]
name = "repla"
version = "0.0.1"
edition = "2021"
description = "Solana app-specific rollup framework for games."
license = "Apache-2.0"

[lib]
name = "repla"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5"
