[package]
name = "repla"
version = "0.1.0"
edition = "2021"
description = "Solana app-specific rollup framework for games -- MagicBlock sequencer runtime + Anchor settler + engine SDKs."
license = "Apache-2.0"
repository = "https://github.com/replalabs/repla-core"
homepage = "https://repla.fun"
documentation = "https://repla.fun/docs"
readme = "README.md"
keywords = ["solana", "magicblock", "rollup", "l3", "anchor"]
categories = ["development-tools", "web-programming", "game-development"]

[lib]
name = "repla"
path = "src/lib.rs"

[[bin]]
name = "repla-sequencer"
path = "src/bin/sequencer.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util", "macros"] }
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
